--- a/.daggerx/templates/module/main.go.tmpl
+++ b/.daggerx/templates/module/main.go.tmpl
@@ -1,4 +1,4 @@
-// Package main provides the Modexample Dagger module and related functions.
+// Package main provides the {{.module_name}} Dagger module and related functions.
 //
 // This module has been generated via dagger init and serves as a reference to
 // basic module structure as you get started with Dagger. The module demonstrates
@@ -17,15 +17,15 @@ import (
 	"github.com/Excoriate/daggerx/pkg/envvars"
 )
 
-// Modexample is a Dagger module.
+// {{.module_name}} is a Dagger module.
 //
 // This module is used to create and manage containers.
-type Modexample struct {
+type {{.module_name}} struct {
 	// Ctr is the container to use as a base container.
 	Ctr *Container
 }
 
-// New creates a new Modexample module.
+// New creates a new {{.module_name}} module.
 //
 // Parameters:
 // - version: The version of the GoReleaser to use, e.g., "v1.22.0". Optional parameter.
@@ -34,23 +34,15 @@ type Modexample struct {
 // - envVarsFromHost: A list of environment variables to pass from the host to the container in a
 // slice of strings. Optional parameter.
 //
-// Returns a pointer to a Modexample instance and an error, if any.
+// Returns a pointer to a {{.module_name}} instance and an error, if any.
 func New(
-	// version is the version of the container image to use.
-	// +optional
 	version string,
-	// image is the container image to use.
-	// +optional
 	image string,
-	// ctr is the container to use as a base container.
-	// +optional
 	ctr *Container,
-	// envVarsFromHost is a list of environment variables to pass from the host to the container in a slice of strings.
-	// +optional
 	envVarsFromHost []string,
-) (*Modexample, error) {
+) (*{{.module_name}}, error) {
 	//nolint:exhaustruct // It's 'okaysh' for now, I'll decide later what's going to be the pattern here.
-	dagModule := &Modexample{}
+	dagModule := &{{.module_name}}{}
 
 	if ctr != nil {
 		dagModule.Ctr = ctr
@@ -91,7 +83,7 @@ func New(
 // The default image is "alpine/latest" and the default version is "latest".
 //
 //nolint:nolintlint,revive // This is a method that is used to set the base image and version.
-func (m *Modexample) Base(imageURL string) *Modexample {
+func (m *{{.module_name}}) Base(imageURL string) *{{.module_name}} {
 	c := dag.Container().From(imageURL)
 	m.Ctr = c
 
