--- a/.daggerx/templates/module/tests/main.go.tmpl
+++ b/.daggerx/templates/module/tests/main.go.tmpl
@@ -1,4 +1,4 @@
-// A generated module for Tests functions
+// A generated module for test the {{.module_name}} functions
 //
 // This module has been generated via dagger init and serves as a reference to
 // basic module structure as you get started with Dagger.
@@ -14,12 +14,12 @@
 package main
 
 import (
-	"context"
-	"errors"
-	"fmt"
-	"strings"
+"context"
+"errors"
+"fmt"
+"strings"
 
-	"github.com/sourcegraph/conc/pool"
+"github.com/sourcegraph/conc/pool"
 )
 
 const emptyErrMsg = "the test output expected is empty"
@@ -34,18 +34,18 @@ var errUnderlyingDagger = errors.New(underlyingDaggerErrMsg)
 //
 // It's a struct that contains a single field, TestDir, which is a pointer to a Directory.
 type Tests struct {
-	TestDir *Directory
+TestDir *Directory
 }
 
 // New creates a new Tests instance.
 //
 // It's the initial constructor for the Tests struct.
 func New() *Tests {
-	t := &Tests{}
+t := &Tests{}
 
-	t.TestDir = t.getTestDir()
+t.TestDir = t.getTestDir()
 
-	return t
+return t
 }
 
 // getTestDir returns the test directory.
@@ -53,186 +53,219 @@ func New() *Tests {
 // This is a helper method for tests, in order to get the test directory which
 // is located in the same directory as the test file, and normally named as "testdata".
 func (m *Tests) getTestDir() *Directory {
-	return dag.CurrentModule().Source().Directory("./testdata")
+return dag.CurrentModule().Source().Directory("./testdata")
 }
 
 // TestAll executes all tests.
 //
 // This is a helper method for tests, in order to execute all tests.
 func (m *Tests) TestAll(ctx context.Context) error {
-	polTests := pool.New().WithErrors().WithContext(ctx)
+polTests := pool.New().WithErrors().WithContext(ctx)
 
-	polTests.Go(m.TestAPIWithContainer)
-	polTests.Go(m.TestAPIPassingEnvVarsInConstructor)
-	polTests.Go(m.TestAPIWithSource)
-	polTests.Go(m.TestAPIPassingEnvVars)
-	polTests.Go(m.TestRunShellCMD)
+polTests.Go(m.TestAPIWithContainer)
+polTests.Go(m.TestAPIPassingEnvVarsInConstructor)
+polTests.Go(m.TestAPIWithSource)
+polTests.Go(m.TestAPIPassingEnvVars)
+polTests.Go(m.TestRunShellCMD)
 
-	if err := polTests.Wait(); err != nil {
-		return fmt.Errorf("there are some failed tests: %w", err)
-	}
+if err := polTests.Wait(); err != nil {
+return fmt.Errorf("there are some failed tests: %w", err)
+}
 
-	return nil
+return nil
 }
 
 // TestAPIWithContainer tests if the container is set correctly.
 //
 // This API is used to override the container set in the Dagger instance.
 func (m *Tests) TestAPIWithContainer(ctx context.Context) error {
-	// Create a new container from the ubuntu:latest image
-	newContainer := dag.Container().From("ubuntu:latest")
+// Create a new container from the ubuntu:latest image
+newContainer := dag.Container().From("ubuntu:latest")
 
-	// Ensure the container runs with root permissions
-	newContainer = newContainer.WithUser("root")
+// Ensure the container runs with root permissions
+newContainer = newContainer.
+WithUser("root")
 
-	// Update package list
-	updateCmd := []string{"apt-get", "update"}
-	newContainer = newContainer.WithExec(updateCmd)
+// Update package list
+updateCmd := []string{"apt-get", "update"}
+newContainer = newContainer.
+WithExec(updateCmd)
 
-	// Install lsb-release package
-	installCmd := []string{"apt-get", "install", "-y", "lsb-release"}
-	newContainer = newContainer.WithExec(installCmd)
+// Install lsb-release package
+installCmd := []string{"apt-get", "install", "-y", "lsb-release"}
+newContainer = newContainer.
+WithExec(installCmd)
 
-	targetModule := dag.{{.module_name}}()
-	targetModule = targetModule.WithContainer(newContainer)
+targetModule := dag.{{.module_name}}()
+targetModule = targetModule.
+WithContainer(newContainer)
 
-	// Specific Ubuntu command that only works in Ubuntu.
-	cmd := []string{"lsb_release", "-a"}
-	out, err := targetModule.Ctr().WithExec(cmd).Stdout(ctx)
+// Specific Ubuntu command that only works in Ubuntu.
+cmd := []string{"lsb_release", "-a"}
+out, err := targetModule.Ctr().
+WithExec(cmd).
+Stdout(ctx)
 
-	if err != nil {
-		return fmt.Errorf("%w, failed to validate an specific ubuntu command: %w", errUnderlyingDagger, err)
-	}
+if err != nil {
+return fmt.Errorf("%w, failed to validate an specific ubuntu command: %w", errUnderlyingDagger, err)
+}
 
-	if out == "" {
-		return fmt.Errorf("%w, failed to validate the overridden container, got empty output", errUnderlyingDagger)
-	}
+if out == "" {
+return fmt.Errorf("%w, failed to validate the overridden container, got empty output", errUnderlyingDagger)
+}
 
-	if !strings.Contains(out, "Ubuntu") {
-		return fmt.Errorf("%w, failed to validate the container, got %s instead of Ubuntu", errUnderlyingDagger, out)
-	}
+if !strings.Contains(out, "Ubuntu") {
+return fmt.Errorf("%w, failed to validate the container, got %s instead of Ubuntu", errUnderlyingDagger, out)
+}
 
-	return nil
+return nil
 }
 
 // TestTerminal returns a terminal for testing.
 //
 // This is a helper method for tests, in order to get a terminal for testing purposes.
 func (m *Tests) TestTerminal() *Terminal {
-	targetModule := dag.{{.module_name}}()
+targetModule := dag.{{.module_name}}()
 
-	_, _ = targetModule.Ctr().Stdout(context.Background())
+_, _ = targetModule.
+Ctr().
+Stdout(context.Background())
 
-	return targetModule.Ctr().Terminal()
+return targetModule.
+Ctr().
+Terminal()
 }
 
 // TestAPIPassingEnvVarsInConstructor tests if the environment variables are passed correctly in the constructor.
 //
 // This is a helper method for tests, in order to test if the env vars are passed correctly in the constructor.
 func (m *Tests) TestAPIPassingEnvVarsInConstructor(ctx context.Context) error {
-	targetModule := dag.{{.module_name}}({{.module_name}}Opts{
-		EnvVarsFromHost: []string{"HOST=localhost", "PORT=8080", "USER=me", "PASS=1234"},
-	})
+targetModule := dag.
+{{.module_name}}({{.module_name}}Opts{
+EnvVarsFromHost: []string{"HOST=localhost", "PORT=8080", "USER=me", "PASS=1234"},
+})
 
-	out, err := targetModule.Ctr().WithExec([]string{"printenv"}).Stdout(ctx)
-	if err != nil {
-		return fmt.Errorf("failed to get env vars: %w", err)
-	}
+out, err := targetModule.
+Ctr().
+WithExec([]string{"printenv"}).
+Stdout(ctx)
 
-	if !strings.Contains(out, "HOST=localhost") {
-		return fmt.Errorf("%w, expected HOST to be set, got %s", errExpectedContentNotMatch, out)
-	}
+if err != nil {
+return fmt.Errorf("failed to get env vars: %w", err)
+}
 
-	if !strings.Contains(out, "PORT=8080") {
-		return fmt.Errorf("%w, expected PORT to be set, got %s", errExpectedContentNotMatch, out)
-	}
+if !strings.Contains(out, "HOST=localhost") {
+return fmt.Errorf("%w, expected HOST to be set, got %s", errExpectedContentNotMatch, out)
+}
 
-	if !strings.Contains(out, "USER=me") {
-		return fmt.Errorf("%w, expected USER to be set, got %s", errExpectedContentNotMatch, out)
-	}
+if !strings.Contains(out, "PORT=8080") {
+return fmt.Errorf("%w, expected PORT to be set, got %s", errExpectedContentNotMatch, out)
+}
 
-	return nil
+if !strings.Contains(out, "USER=me") {
+return fmt.Errorf("%w, expected USER to be set, got %s", errExpectedContentNotMatch, out)
+}
+
+return nil
 }
 
 // TestAPIPassingEnvVars tests if the environment variables are passed correctly in the API.
 //
 // This is a helper method for tests, in order to test if the env vars are passed correctly in the API.
 func (m *Tests) TestAPIPassingEnvVars(ctx context.Context) error {
-	targetModule := dag.{{.module_name}}().WithEnvironmentVariable("HOST", "localhost", {{.module_name}}WithEnvironmentVariableOpts{
-		Expand: false,
-	})
+targetModule := dag.
+{{.module_name}}().
+WithEnvironmentVariable("HOST", "localhost", {{.module_name}}WithEnvironmentVariableOpts{
+Expand: false,
+})
 
-	targetModule = targetModule.WithEnvironmentVariable("PORT", "8080", {{.module_name}}WithEnvironmentVariableOpts{
-		Expand: false,
-	})
+targetModule = targetModule.
+WithEnvironmentVariable("PORT", "8080", {{.module_name}}WithEnvironmentVariableOpts{
+Expand: false,
+})
 
-	targetModule = targetModule.WithEnvironmentVariable("USER", "me", {{.module_name}}WithEnvironmentVariableOpts{
-		Expand: false,
-	})
+targetModule = targetModule.
+WithEnvironmentVariable("USER", "me", {{.module_name}}WithEnvironmentVariableOpts{
+Expand: false,
+})
 
-	out, err := targetModule.Ctr().WithExec([]string{"printenv"}).Stdout(ctx)
-	if err != nil {
-		return fmt.Errorf("failed to get env vars: %w", err)
-	}
+out, err := targetModule.
+Ctr().
+WithExec([]string{"printenv"}).
+Stdout(ctx)
 
-	if out == "" {
-		return fmt.Errorf("%w, expected to have at least one env var, got empty output", errEmptyOutput)
-	}
+if err != nil {
+return fmt.Errorf("failed to get env vars: %w", err)
+}
 
-	if !strings.Contains(out, "HOST=localhost") {
-		return fmt.Errorf("%w, expected HOST to be set, got %s", errExpectedContentNotMatch, out)
-	}
+if out == "" {
+return fmt.Errorf("%w, expected to have at least one env var, got empty output", errEmptyOutput)
+}
 
-	if !strings.Contains(out, "PORT=8080") {
-		return fmt.Errorf("%w, expected PORT to be set, got %s", errExpectedContentNotMatch, out)
-	}
+if !strings.Contains(out, "HOST=localhost") {
+return fmt.Errorf("%w, expected HOST to be set, got %s", errExpectedContentNotMatch, out)
+}
 
-	if !strings.Contains(out, "USER=me") {
-		return fmt.Errorf("%w, expected USER to be set, got %s", errExpectedContentNotMatch, out)
-	}
+if !strings.Contains(out, "PORT=8080") {
+return fmt.Errorf("%w, expected PORT to be set, got %s", errExpectedContentNotMatch, out)
+}
 
-	return nil
+if !strings.Contains(out, "USER=me") {
+return fmt.Errorf("%w, expected USER to be set, got %s", errExpectedContentNotMatch, out)
+}
+
+return nil
 }
 
 // TestAPIWithSource tests if the source directory is set correctly.
 func (m *Tests) TestAPIWithSource(ctx context.Context) error {
-	targetModule := dag.{{.module_name}}()
-	targetModule.WithSource(m.TestDir)
+targetModule := dag.
+{{.module_name}}()
 
-	out, err := targetModule.Ctr().WithExec([]string{"ls", "-l"}).Stdout(ctx)
-	if err != nil {
-		return fmt.Errorf("failed to get ls output: %w", err)
-	}
+targetModule.
+WithSource(m.TestDir)
 
-	if out == "" {
-		return fmt.Errorf("%w, expected to have at least one folder, got empty output", errEmptyOutput)
-	}
+out, err := targetModule.
+Ctr().
+WithExec([]string{"ls", "-l"}).
+Stdout(ctx)
 
-	if !strings.Contains(out, "total") {
-		return fmt.Errorf("%w, expected to have at least one folder, got %s", errExpectedContentNotMatch, out)
-	}
+if err != nil {
+return fmt.Errorf("failed to get ls output: %w", err)
+}
 
-	return nil
+if out == "" {
+return fmt.Errorf("%w, expected to have at least one folder, got empty output", errEmptyOutput)
+}
+
+if !strings.Contains(out, "total") {
+return fmt.Errorf("%w, expected to have at least one folder, got %s", errExpectedContentNotMatch, out)
+}
+
+return nil
 }
 
 // TestRunShellCMD runs a shell command in the container.
 //
 // Tests if the shell command is executed correctly in the container.
 func (m *Tests) TestRunShellCMD(ctx context.Context) error {
-	targetModule := dag.{{.module_name}}()
-	out, err := targetModule.RunShell(ctx, "ls -l")
+targetModule := dag.
+{{.module_name}}()
 
-	if err != nil {
-		return fmt.Errorf("%w, failed to run shell command: %w", errUnderlyingDagger, err)
-	}
+out, err := targetModule.
+RunShell(ctx, "ls -l")
 
-	if out == "" {
-		return fmt.Errorf("%w, expected to have at least one folder, got empty output", errEmptyOutput)
-	}
+if err != nil {
+return fmt.Errorf("%w, failed to run shell command: %w", errUnderlyingDagger, err)
+}
 
-	if !strings.Contains(out, "total") {
-		return fmt.Errorf("%w, expected to have at least one folder, got %s", errExpectedContentNotMatch, out)
-	}
+if out == "" {
+return fmt.Errorf("%w, expected to have at least one folder, got empty output", errEmptyOutput)
+}
 
-	return nil
+if !strings.Contains(out, "total") {
+return fmt.Errorf("%w, expected to have at least one folder, got %s", errExpectedContentNotMatch, out)
+}
+
+return nil
 }
