--- a/.daggerx/templates/github/workflows/mod-template-ci.yaml.tmpl
+++ b/.daggerx/templates/github/workflows/mod-template-ci.yaml.tmpl
@@ -26,7 +26,7 @@ jobs:
         strategy:
             matrix:
                 go: ['1.22']
-                dagversion: [0.11.6, 0.11.7]
+                dagversion: [0.11.6, 0.11.7, 0.11.8, 0.11.9]
         name: Lint {{.module_name}} on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
         runs-on: ubuntu-latest
         steps:
@@ -109,7 +109,7 @@ jobs:
         strategy:
             matrix:
                 go: ['1.22']
-                dagversion: [0.11.6, 0.11.7]
+                dagversion: [0.11.6, 0.11.7, 0.11.8, 0.11.9]
         needs: [linter, golangci-lint]
         name: Run Tests 🧪 in {{.module_name}} on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
         runs-on: ubuntu-latest
