--- a/.daggerx/templates/github/workflows/mod-template-ci.yaml.tmpl
+++ b/.daggerx/templates/github/workflows/mod-template-ci.yaml.tmpl
@@ -1,117 +1,145 @@
 ---
-name: Module {{.module_example}} CI
+name: {{.module_name}} CI 🧹
 on:
-  push:
-    branches:
-      - main
-      - master
-    paths:
-      - '{{.module_example}}/**/*.go'
-  pull_request:
-    paths:
-      - '{{.module_example}}/**/*.go'
-  workflow_dispatch:
+    push:
+        branches:
+            - main
+            - master
+        paths:
+            - {{.module_name}}/**/*.go
+    pull_request:
+        paths:
+            - {{.module_name}}/**/*.go
+    workflow_dispatch:
 
 permissions:
-  contents: read
-  pull-requests: read
-  checks: write
+    contents: read
+    pull-requests: read
+    checks: write
 
 defaults:
-  run:
-    working-directory: {{.module_example}}
+    run:
+        working-directory: {{.module_name}}
 
 jobs:
-  linter:
-    strategy:
-      matrix:
-        go: ['1.22']
-        dagversion: [0.11.6, 0.11.7]
-    name: Lint {{.module_example}} on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-go@v5
-        with:
-          go-version: ${{ matrix.go }}
-      - name: Dagger Develop on Module 📦 with Dagger ${{ matrix.dagversion }}
-        uses: dagger/dagger-for-github@v5
-        with:
-          verb: develop
-          module: {{.module_example}}
-          version: ${{ matrix.dagversion }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Dagger Develop on Test Module 🧪 with Dagger ${{ matrix.dagversion }}
-        uses: dagger/dagger-for-github@v5
-        with:
-          verb: develop
-          module: {{.module_example}}/tests
-          version: ${{ matrix.dagversion }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Dagger Call on Module with Dagger ${{ matrix.dagversion }}
-        uses: dagger/dagger-for-github@v5
-        with:
-          verb: call
-          module: {{.module_example}}
-          version: ${{ matrix.dagversion }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Dagger Call on Test Module 🧪 with Dagger ${{ matrix.dagversion }}
-        uses: dagger/dagger-for-github@v5
-        with:
-          verb: call
-          module: {{.module_example}}/tests
-          version: ${{ matrix.dagversion }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Run golangci-lint on {{.module_example}} 📦
-        uses: golangci/golangci-lint-action@v6
-        with:
-          version: v1.58
-          args: --config .golangci.yml ./{{.module_example}}/dagger
-      - name: Run golangci-lint on {{.module_example}}/tests 🧪
-        uses: golangci/golangci-lint-action@v6
-        with:
-          version: v1.58
-          args: --config .golangci.yml ./{{.module_example}}/tests/dagger
+    linter:
+        strategy:
+            matrix:
+                go: ['1.22']
+                dagversion: [0.11.6, 0.11.7, 0.11.8, 0.11.9]
+        name: Lint {{.module_name}} on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - uses: actions/setup-go@v5
+              with:
+                  go-version: ${{ matrix.go }}
+            - name: Dagger Develop on Module 📦 with Dagger ${{ matrix.dagversion }}
+              uses: dagger/dagger-for-github@v5
+              with:
+                  verb: develop
+                  module: {{.module_name}}
+                  version: ${{ matrix.dagversion }}
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            - name: Dagger Develop on Test Module 🧪 with Dagger ${{ matrix.dagversion }}
+              uses: dagger/dagger-for-github@v5
+              with:
+                  verb: develop
+                  module: {{.module_name}}/tests
+                  version: ${{ matrix.dagversion }}
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            - name: Dagger Call on Module with Dagger ${{ matrix.dagversion }}
+              uses: dagger/dagger-for-github@v5
+              with:
+                  verb: call
+                  module: {{.module_name}}
+                  version: ${{ matrix.dagversion }}
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            - name: Dagger Call on Test Module 🧪 with Dagger ${{ matrix.dagversion }}
+              uses: dagger/dagger-for-github@v5
+              with:
+                  verb: call
+                  module: {{.module_name}}/tests
+                  version: ${{ matrix.dagversion }}
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  module-test:
-    strategy:
-      matrix:
-        go: ['1.22']
-        dagversion: [0.11.6, 0.11.7]
-    needs: linter
-    name: Run Tests 🧪 in {{.module_example}} on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-go@v5
-        with:
-          go-version: ${{ matrix.go }}
-      - name: Dagger Develop on Module 📦 with Dagger ${{ matrix.dagversion }}
-        uses: dagger/dagger-for-github@v5
-        with:
-          verb: develop
-          module: {{.module_example}}
-          version: ${{ matrix.dagversion }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Dagger Develop on Test Module 🧪 with Dagger ${{ matrix.dagversion }}
-        uses: dagger/dagger-for-github@v5
-        with:
-          verb: develop
-          module: {{.module_example}}/tests
-          version: ${{ matrix.dagversion }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Running Tests 💣 in {{.module_example}} on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
-        uses: dagger/dagger-for-github@v5
-        with:
-          verb: call
-          args: test-all
-          module: {{.module_example}}/tests
-          version: ${{ matrix.dagversion }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    golangci-lint:
+        strategy:
+            matrix:
+                go: ['1.22']
+        name: GolangCI-Lint for {{.module_name}}
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - uses: actions/setup-go@v5
+              with:
+                  go-version: ${{ matrix.go }}
+            - name: Dagger Develop on Module 📦 {{.module_name}} with Dagger ${{ matrix.dagversion }}
+              uses: dagger/dagger-for-github@v5
+              with:
+                  verb: develop
+                  module: {{.module_name}}
+                  version: ${{ matrix.dagversion }}
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            - name: Run golangci-lint on {{.module_name}} 📦
+              uses: golangci/golangci-lint-action@v6
+              with:
+                  version: v1.58
+                  args: --config .golangci.yml ./{{.module_name}}/dagger
+            - name: Dagger Develop on Module tests 🧪 {{.module_name}} with Dagger ${{ matrix.dagversion }}
+              uses: dagger/dagger-for-github@v5
+              with:
+                  verb: develop
+                  module: {{.module_name}}/tests
+                  version: ${{ matrix.dagversion }}
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            - name: Run golangci-lint on {{.module_name}}/tests 🧪
+              uses: golangci/golangci-lint-action@v6
+              with:
+                  version: v1.58
+                  args: --config .golangci.yml ./{{.module_name}}/tests/dagger
+
+    module-test:
+        strategy:
+            matrix:
+                go: ['1.22']
+                dagversion: [0.11.6, 0.11.7, 0.11.8, 0.11.9]
+        needs: [linter, golangci-lint]
+        name: Run Tests 🧪 in {{.module_name}} on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - uses: actions/setup-go@v5
+              with:
+                  go-version: ${{ matrix.go }}
+            - name: Dagger Develop on Module 📦 with Dagger ${{ matrix.dagversion }}
+              uses: dagger/dagger-for-github@v5
+              with:
+                  verb: develop
+                  module: {{.module_name}}
+                  version: ${{ matrix.dagversion }}
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            - name: Dagger Develop on Test Module 🧪 with Dagger ${{ matrix.dagversion }}
+              uses: dagger/dagger-for-github@v5
+              with:
+                  verb: develop
+                  module: {{.module_name}}/tests
+                  version: ${{ matrix.dagversion }}
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            - name: Running Tests 💣 in {{.module_name}} on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+              uses: dagger/dagger-for-github@v5
+              with:
+                  verb: call
+                  args: test-all
+                  module: {{.module_name}}/tests
+                  version: ${{ matrix.dagversion }}
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
