refactor: fix gotest

--- a/.daggerx/templates/module/main.go.tmpl
+++ b/.daggerx/templates/module/main.go.tmpl
@@ -15,6 +15,7 @@ import (
 
 	"github.com/Excoriate/daggerx/pkg/containerx"
 	"github.com/Excoriate/daggerx/pkg/envvars"
+	"github.com/excoriate/daggerverse/{{.module_name}}/internal/dagger"
 )
 
 // {{.module_name}} is a Dagger module.
