--- a/.daggerx/templates/github/workflows/mod-template-ci.yaml.tmpl
+++ b/.daggerx/templates/github/workflows/mod-template-ci.yaml.tmpl
@@ -26,7 +26,7 @@ jobs:
         strategy:
             matrix:
                 go: ['1.22']
-                dagversion: [0.12.0, 0.12.1, 0.12.2, 0.12.3. 0.12.4]
+                dagversion: [0.12.0, 0.12.1, 0.12.2, 0.12.3]
         name: Lint {{.module_name_pkg}} on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
         runs-on: ubuntu-latest
         steps:
@@ -105,11 +105,16 @@ jobs:
                   version: ${{ matrix.dagversion }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+          # Install golangci-lint using curl
+            - name: Install golangci-lint
+              run: |
+                curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s latest
+                sudo mv ./bin/golangci-lint /usr/local/bin/golangci-lint
+
             - name: Run golangci-lint on {{.module_name_pkg}} 📦
-              uses: golangci/golangci-lint-action@v6
-              with:
-                  version: v1.59
-                  args: --config .golangci.yml ./{{.module_name_pkg}}
+              run: |
+                golangci-lint run --config=../.golangci.yml --verbose
 
       # Dagger test module 🧪 (develop & golang ci-lint)
             - name: Dagger Develop on Module tests 🧪 {{.module_name_pkg}} with Dagger ${{ matrix.dagversion }}
@@ -121,10 +126,10 @@ jobs:
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             - name: Run golangci-lint on {{.module_name_pkg}}/tests 🧪
-              uses: golangci/golangci-lint-action@v6
-              with:
-                  version: v1.59
-                  args: --config .golangci.yml ./{{.module_name_pkg}}/tests
+              run: |
+                cd tests
+                ls -ltrah
+                golangci-lint run --config=../../.golangci.yml --verbose
 
       # Dagger examples (go) module 📄 (develop & golang ci-lint)
             - name: Dagger Develop on Module Examples/Go 📄 {{.module_name_pkg}} with Dagger ${{ matrix.dagversion }}
@@ -136,16 +141,16 @@ jobs:
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             - name: Run golangci-lint on {{.module_name_pkg}}/examples/go 📄 (develop & golang ci-lint)
-              uses: golangci/golangci-lint-action@v6
-              with:
-                  version: v1.59
-                  args: --config .golangci.yml ./{{.module_name_pkg}}/examples/go
+              run: |
+                cd examples/go
+                ls -ltrah
+                golangci-lint run --config=../../../.golangci.yml --verbose
 
     module-test:
         strategy:
             matrix:
                 go: ['1.22']
-                dagversion: [0.12.0, 0.12.1, 0.12.2, 0.12.3. 0.12.4]
+                dagversion: [0.12.0, 0.12.1, 0.12.2, 0.12.3]
         needs: [dagger-linter, golangci-lint]
         name: Run Tests 🧪 in {{.module_name_pkg}} on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
         runs-on: ubuntu-latest
@@ -184,7 +189,7 @@ jobs:
         strategy:
             matrix:
                 go: ['1.22']
-                dagversion: [0.12.0, 0.12.1, 0.12.2, 0.12.3. 0.12.4]
+                dagversion: [0.12.0, 0.12.1, 0.12.2, 0.12.3]
         needs: [dagger-linter, golangci-lint]
         name: Run recipes 🥗 in {{.module_name_pkg}}/examples/go on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
         runs-on: ubuntu-latest
