--- a/.daggerx/templates/examples/go/main.go.tmpl
+++ b/.daggerx/templates/examples/go/main.go.tmpl
@@ -53,7 +53,8 @@ func (m *Go) getTestDir() *dagger.Directory {
 
 // AllRecipes executes all tests.
 //
-// AllRecipes is a helper method for tests, executing the built-in recipes and other specific functionalities of the {{.module_name}} module.
+// AllRecipes is a helper method for tests, executing the built-in recipes and
+// other specific functionalities of the {{.module_name}} module.
 func (m *Go) AllRecipes(ctx context.Context) error {
 	polTests := pool.New().WithErrors().WithContext(ctx)
 
